cm4all-myproxy (0.6) unstable; urgency=low

  * use Rendezvous Hashing instead of Consistent Hashing
  * implement (optional) monitoring
  * fix memory leak
  * make libsystemd optional
  * debian: restart after upgrade

 --   

cm4all-myproxy (0.5) unstable; urgency=low

  * do not strip CLIENT_SECURE_CONNECTION (fixes MariaDB login)
  * fix use-after-free crash bug after PostgreSQL disconnect

 -- Max Kellermann <mk@cm4all.com>  Tue, 18 Jul 2023 00:42:48 +0200

cm4all-myproxy (0.4) unstable; urgency=low

  * fix crash with multiple systemd sockets
  * disable Nagle's algorithm to reduce latency
  * systemd: remove "CPUSchedulingPolicy=batch"

 -- Max Kellermann <mk@cm4all.com>  Tue, 25 Apr 2023 11:25:05 +0200

cm4all-myproxy (0.3) unstable; urgency=low

  * lua: fix crash after Lua error
  * omit "handshake_response.database" if it was not specified

 -- Max Kellermann <mk@cm4all.com>  Mon, 24 Apr 2023 11:13:37 +0200

cm4all-myproxy (0.2) unstable; urgency=low

  * allow passing SocketAddress to mysql_cluster()
  * allow specifying the password SHA1 in on_handshake_response()
  * lua: support PostgreSQL arrays
  * lua: add bindings for libsodium Sealed boxes

 -- Max Kellermann <mk@cm4all.com>  Thu, 20 Apr 2023 16:59:50 +0200

cm4all-myproxy (0.1) unstable; urgency=low

  * initial release

 -- Max Kellermann <mk@cm4all.com>  Tue, 18 Apr 2023 15:39:11 +0200