@@ -7,6 +7,8 @@ After=network-online.target
 User=cm4all-myproxy
 ExecStart=/usr/sbin/cm4all-myproxy
 
+WatchdogSec=2m
+
 # This allows the kernel to merge CPU wakeups, the default of 50ns is
 # too fine.
 TimerSlackNSec=10ms
